<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/lobby_code_is" />

    <TextView
        android:id="@+id/lobby_code_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/lobby_code" />

    <TextView
        android:id="@+id/prompt_codename_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_codeName_tv"
        tools:text="@string/enter_codeName_tv" />

    <EditText
        android:id="@+id/lobby_changeCodename_TE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player_codename"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/lobby_ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        tools:text="@string/ready" />

    <Button
        android:id="@+id/lobby_codename_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_codename" />

    <Button
        android:id="@+id/lobby_quit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        tools:text="@string/quit" />

</LinearLayout>